# wikitongues-ai

./: .gitignore  README.md  pyproject.toml
data/annotations/pairwise/: sample.json
data/annotations/rubric/: sample.json
data/prompts/: igala.yaml  lebanese_arabic.yaml  schema.yaml
reports/: benchmark_report.md
scripts/: generate_report.py  run_models.py
tasks/: prd-language-learning-ai.md
web/: package.json  pnpm-lock.yaml
web/prisma/: schema.prisma  seed-handoffs.ts  seed-model-outputs.ts  seed-rag.ts  seed.ts
web/scripts/: migrate-phase-a.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(app)/: layout.tsx
web/src/app/(app)/admin/: layout.tsx  page.tsx
web/src/app/(app)/annotator/: layout.tsx  page.tsx
web/src/app/(app)/annotator/annotate/: page.tsx
web/src/app/(app)/annotator/prompts/: page.tsx
web/src/app/(app)/annotator/review/: page.tsx
web/src/app/(auth)/login/: page.tsx
web/src/app/(auth)/register/: page.tsx
web/src/app/(learner)/: layout.tsx
web/src/app/api/chat/: route.ts
web/src/app/api/handoffs/: route.ts
web/src/app/api/prompts/: route.ts
web/src/components/: annotation-interface.tsx  chat-interface.tsx  help-button.tsx  prompt-form.tsx  prompt-list.tsx  review-item.tsx  review-queue.tsx  role-guard.tsx  sidebar.tsx
web/src/components/admin/: agreement-stats.tsx  annotator-activity.tsx  category-breakdown.tsx  export-panel.tsx  gap-dashboard.tsx  leaderboard.tsx
web/src/lib/: auth.ts  rag.ts  roles.ts
web/src/lib/agents/: orchestrator.ts  reviewer.ts  translator.ts  types.ts
(+15 files in other folders)
